fixed a bug regarding task view

--- a/flaskProject/templates/EditSubTask.html
+++ b/flaskProject/templates/EditSubTask.html
@@ -4,7 +4,7 @@
 <!-- html code for the body of the page-->
 {% block content %}
     <h1>Edit subtask</h1>
-    <form>
+    <form action="" method="POST">
         <div class="form-group">
             {{ form.subTaskName.label }}
             <br>
