--- a/flaskProject/templates/TaskView.html
+++ b/flaskProject/templates/TaskView.html
@@ -8,6 +8,7 @@
         <button type="submit" class="btn btn-secondary"><a href="{{ url_for('EditTask', task=task.getId()) }}">Edit
             Task</a></button>
         <button type="submit" value="submit" name="ArchiveTask" class="btn btn-secondary">Archive Task</button>
+        <button type="submit" value="submit" name="DemoteTask" class="btn btn-secondary">Demote Task</button>
         <button type="submit" class="btn btn-secondary"><a href="{{ url_for('Help') }}">Help</a></button>
     </form>
 
