--- a/flaskProject/templates/Subtasks.html
+++ b/flaskProject/templates/Subtasks.html
@@ -22,12 +22,13 @@
                     </h5>
                 </div>
                 <p class="mb-1">{{ subtask.getDescription() }}</p>
-                <div class="custom-control custom-checkbox mb-3">
-                    <input type="checkbox" class="custom-control-input" id="customCheck" name="example1">
-                    <label class="custom-control-label" for="customCheck">Complete</label>
-                    <button type="submit" class="btn btn-secondary"><a href="">Archive subtask</a></button>
-                    <button type="submit" class="btn btn-secondary"><a href="">Promote subtask</a></button>
-                </div>
+                <form method=post>
+                    {# <button type="submit" class="btn btn-secondary">Archive System</button>#}
+                    <button type="submit" class="btn btn-secondary"><a
+                            href="{{ url_for('ArchiveSubtask', subtask=subtask.getId()) }}">Archive Subtask</a></button>
+{#                    <button type="submit" class="btn btn-secondary"><a#}
+{#                            href="{{ url_for('DemoteTask', task=task.getId()) }}">Demote task</a></button>#}
+                </form>
                 {#        <form method=post>#}
                 {# <button type="submit" class="btn btn-secondary">Archive System</button>#}
                 {#            <button type="submit" class="btn btn-secondary"><a#}
