added funtionality to restore tasks/subtasks from ArchivecontentView page

--- a/flaskProject/templates/ArchiveContentView.html
+++ b/flaskProject/templates/ArchiveContentView.html
@@ -79,6 +79,7 @@
                     <form action="{{ url_for('RestoreSubtask', subtask=subtask.getId()) }}" method=post>
                         <button type="submit" class="btn btn-secondary">Restore Subtask</button>
                     </form>
+{#                    <p> <a href="{{ url_for('RestoreSubtask', subtask=subtask.getId()) }}">werwr</a>34</p>#}
                 </div>
             </div>
         {% endfor %}
