--- a/flaskProject/templates/EditTask.html
+++ b/flaskProject/templates/EditTask.html
@@ -52,7 +52,7 @@
         </div>
 
         <button type="submit" class="btn btn-secondary" name="editTask">Save</button>
-        <button type="submit" class="btn btn-secondary"><a href="{{ url_for('TaskView', task=task.getId()) }}">Cancel</a></button>
+        <button type="submit" class="btn btn-secondary"><a href="{{ url_for('TaskView', task=task.getTitle()) }}">Cancel</a></button>
     </form>
     <br>
 {% endblock content %}
