--- a/flaskProject/templates/TaskView.html
+++ b/flaskProject/templates/TaskView.html
@@ -5,7 +5,7 @@
 {% block content %}
     <h1>Task Detailed View </h1>
     <form method=post>
-        <button type="submit" class="btn btn-secondary"><a href="{{ url_for('EditTask', task=task.getTitle()) }}">Edit
+        <button type="submit" class="btn btn-secondary"><a href="{{ url_for('EditTask', task=task.getId()) }}">Edit
             Task</a></button>
         <button type="submit" value="submit" name="ArchiveTask" class="btn btn-secondary">Archive Task</button>
         <button type="submit" value="submit" name="DemoteTask" class="btn btn-secondary">Demote Task</button>
