--- a/flaskProject/templates/Tasks.html
+++ b/flaskProject/templates/Tasks.html
@@ -12,7 +12,7 @@
 
             <div class="list-group-item list-group-item-action flex-column flex-fill align-items-start">
                 <div class="d-flex w-100 p-3 flex-fill justify-content-between">
-                    <a type="submit" href="{{ url_for('TaskView', task=task.getTitle()) }}">
+                    <a type="submit" href="{{ url_for('TaskView', task=task.getId()) }}">
                         <h4 class="mb-1">{{ task.getTitle() }}</h4>
                     </a>
                     <small>No. of Subtasks: 4</small>
