--- a/flaskProject/templates/EventView.html
+++ b/flaskProject/templates/EventView.html
@@ -57,21 +57,42 @@
     <button type="submit" class="btn btn-secondary"><a href="{{ url_for('CreateAnalyst') }}">Add Analyst</a></button>
     <hr>
     <h4>Lead Analysts</h4>
-    <p></p>
+        <table style="width:100%">
+
+        {% for initial in leadList %}
+            <tr>
+                <td>{{ initial }}</td>
+                <td>
+                    <form action="{{ url_for('deleteAnalyst', initial=initial) }}" method=post>
+
+                        <input type="submit" class="btn btn-secondary" value="Delete"/>
+                    </form>
+                </td>
+        {% endfor %}
+    </table>
+
     <hr>
     <h4>Analysts (Event Team)</h4>
     <!-- loop through the list of initials that event.getEventTeam() retrieves  and display them along with a delete button-->
-    {% for initial in event.getEventTeam() %}
-        <ul>
-            <li style="list-style-type: circle">
-                <form action="{{ url_for('deleteAnalyst', initial=initial) }}" method=post>
-                    {{ initial }}
-                    <input type="hidden" value="{{ initial }}">
-                    <input type="submit" class="btn btn-secondary" value="Delete"/>
-                </form>
-            </li>
-        </ul>
-    {% endfor %}
+    <table style="width:100%">
+        {% for initial in nonleadList %}
+            <tr>
+                <td>{{ initial }}</td>
+                <td>
+                    <form action="{{ url_for('deleteAnalyst', initial=initial) }}" method=post>
+
+                        <input type="submit" class="btn btn-secondary" value="Delete"/>
+                    </form>
+                </td>
+{#                <td>#}
+{#                    <form action="{{ url_for('EditAnalyst', analys=initial) }}" method=post>#}
+{#                        <input type="submit" class="btn btn-secondary" value="Edit Analyst"/>#}
+{#                    </form>#}
+{#                </td>#}
+            </tr>
+        {% endfor %}
+    </table>
+
     <hr>
 {% endblock content %}
 
@@ -85,7 +106,8 @@
             <li class="list-group-item list-group-item-light"><a href="{{ url_for('EventTree') }}"> Event Tree</a></li>
             <li class="list-group-item list-group-item-light"><a
                     href="{{ url_for('AnalystProgressSummaryContentView') }}"> Analyst Progress Summary</a></li>
-            <li class="list-group-item list-group-item-light"><a href="{{ url_for('EventView') }}">Event Overview</a></li>
+            <li class="list-group-item list-group-item-light"><a href="{{ url_for('EventView') }}">Event Overview</a>
+            </li>
             <li class="list-group-item list-group-item-light"><a href="{{ url_for('Systems') }}"> Systems</a></li>
             <li class="list-group-item list-group-item-light"><a href="{{ url_for('Tasks') }}"> Tasks</a></li>
             <li class="list-group-item list-group-item-light"><a href="{{ url_for('Subtasks') }}"> Subtasks</a></li>
@@ -97,7 +119,8 @@
                 Configuration</a></li>
             <li class="list-group-item list-group-item-light"><a href="{{ url_for('SetupContentView') }}"> Setup</a>
             </li>
-            <li class="list-group-item list-group-item-light"><a href="{{ url_for('Help',_anchor='createevent') }}"> Help</a></li>
+            <li class="list-group-item list-group-item-light"><a href="{{ url_for('Help',_anchor='createevent') }}">
+                Help</a></li>
             <li class="list-group-item list-group-item-light"><a href="{{ url_for('Sync') }}"> Sync</a></li>
         </ul>
         </p>
