added funtionality to create/ show in overview and  in detailed for findings,added analyst progress sumary content view (how I understood)

--- a/flaskProject/templates/CreateFinding.html
+++ b/flaskProject/templates/CreateFinding.html
@@ -4,7 +4,7 @@
 <!-- html code for the body of the page-->
 {% block content %}
     <h1>Create Finding</h1>
-    <form>
+    <form method="post">
                <div class="form-group">
             {{ form.findingHostName.label }}
             <br>
