--- a/flaskProject/templates/EditFinding.html
+++ b/flaskProject/templates/EditFinding.html
@@ -4,7 +4,7 @@
 <!-- html code for the body of the page-->
 {% block content %}
     <h1>Edit Finding</h1>
-    <form>
+    <form action="" method="POST">
        <div class="form-group">
             {{ form.findingHostName.label }}
             <br>
@@ -102,7 +102,7 @@
         </div>
 
         <button type="submit" class="btn btn-secondary" name="editFinding">Save</button>
-        <button type="submit" class="btn btn-secondary"><a href="{{ url_for('FindingView', finding=finding.getId()) }}">Cancel</a></button>
+        <button type="submit" class="btn btn-secondary"><a href="{{ url_for('FindingView', finding=finding.getid()) }}">Cancel</a></button>
         <br><br>
     </form>
 {% endblock content %}
