--- a/flaskProject/templates/SubTaskView.html
+++ b/flaskProject/templates/SubTaskView.html
@@ -12,12 +12,12 @@
         <button type="submit" class="btn btn-secondary"><a href="{{ url_for('Help') }}">Help</a></button>
     </form>
     <h3>Subtask Information</h3>
-    <h5>Progress:</h5>
-    <div class="progress">
-        <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0"
-             aria-valuemax="100">25%
-        </div>
-    </div>
+{#    <h5>Progress:</h5>#}
+{#    <div class="progress">#}
+{#        <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0"#}
+{#             aria-valuemax="100">25%#}
+{#        </div>#}
+{#    </div>#}
     <h4>Subtask name</h4>
     <p>{{ subtask.getTitle() }}</p>
     <hr>
